<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    tools:context=".CreateAcctActivity">

    <ProgressBar
        android:visibility="gone"
        android:layout_marginTop="20dp"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBarCreateAcct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nameCreateAcct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/nameCreateAcct"
            android:maxLines="15" />

        <AutoCompleteTextView
            android:id="@+id/emailCreateAcct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailCreateAcct"
            android:inputType="textEmailAddress" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordCreateAcct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordCreateAcct"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/showPasswordButton"
                android:background="@drawable/ic_visibility_white_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/confirmPasswordCreateAcct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPasswordCreateAcct"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/showConfirmPasswordButton"
                android:background="@drawable/ic_visibility_white_24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp" />


        </RelativeLayout>

        <Button
            android:id="@+id/createAcctButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/createAcctButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Or"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>